--- a/contato.html
+++ b/contato.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Contato - Barbearia Alura</title>
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style mobile480px.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
         <header> 
@@ -33,7 +37,7 @@
                 <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
                 <label for="mensagem">Mensagem</label>
-                <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required placeholder="Digite sua Mensagem..."></textarea>
+                <textarea cols="auto" rows="auto" id="mensagem" class="input-padrao" required placeholder="Digite sua Mensagem..."></textarea>
                 
                 <fieldset>
                     <legend>Como prefere nosso contato?</legend>
