--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+
         <title>Barbearia Alura</title>
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
-        <!--fonte pega no link https://fonts.google.com/ -->
+        <link rel="stylesheet" href="style mobile480px.css">
+        <!--fonte no link https://fonts.google.com/ -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
@@ -17,7 +20,7 @@
             <div class="caixa">
                 <h1><img src="imagens/logo.png"></h1>
 
-                <nav>
+                <nav> <!-- barra navegação -->
                     <ul>
                         <li><a href="index.html ">Home</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
@@ -67,7 +70,7 @@
                     </ul><img src="beneficios.jpg" class="imagem-beneficios">
                 </div>
                     <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
             </div>
         </main>
